--- a/proofofconcept.qmd
+++ b/proofofconcept.qmd
@@ -5,6 +5,13 @@ format: html
 editor: visual
 ---
 
+```{r setup, include=F, warning=F, message=F}
+library(dplyr)
+library(glue)
+library(readr)
+
+```
+
 ## Quarto
 
 Quarto enables you to weave together content and executable code into a finished document. To learn more about Quarto see <https://quarto.org>.
@@ -25,3 +32,35 @@ You can add options to executable code like this
 ```
 
 The `echo: false` option disables the printing of code (only output is displayed).
+
+```{r download data}
+
+# lighthouse data
+lh_link <- "https://docs.google.com/spreadsheets/d/1gUBU8s2de3nRVO9bHi3EJYMllcFR-MQ9Uyni1SPlEns/edit?gid=0#gid=0"
+lh_link <- "https://spreadsheets.google.com/feeds/download/spreadsheets/Export?key=1gUBU8s2de3nRVO9bHi3EJYMllcFR-MQ9Uyni1SPlEns&exportFormat=xlsx"
+lh <- openxlsx::read.xlsx(lh_link, sheet = "Effects Summaries")
+```
+
+<details>
+
+<summary>Example for ausklabbable Statistics Dingens</summary>
+
+`r mean(c(1:100))`
+
+</details>
+
+```{r reversals test}
+
+lh %>%
+  group_by(discipline) %>%
+  summarise(
+    text = paste0("**", effect.original, ".** ", description, "\n\n", collapse = "")
+  ) %>%
+  rowwise() %>%
+  mutate(
+    section = paste0("# ", discipline, "\n\n", text)
+  ) %>%
+  pull(section) %>%
+  cat(sep = "\n")
+
+```
