--- a/proofofconcept.qmd
+++ b/proofofconcept.qmd
@@ -1,7 +1,12 @@
 ---
 title: "Lighthouse Proof of Concept"
-author: "Elena Richert"
-format: html
+author: 
+  - Elena Richert
+  - Lukas Röseler
+date: "`r Sys.Date()`"
+format:
+  html:
+    embed-resources: true
 editor: visual
 ---
 
@@ -54,13 +59,25 @@ lh <- openxlsx::read.xlsx(lh_link, sheet = "Effects Summaries")
 lh %>%
   group_by(discipline) %>%
   summarise(
-    text = paste0("**", effect.original, ".** ", description, "\n\n", collapse = "")
+    html_section = paste0(
+      '<div class="effect">\n',
+      '  <h3>', effect.original, '</h3>\n',
+      '  <p>', description, '</p>\n',
+      '</div>\n',
+      collapse = "\n"
+    )
   ) %>%
   rowwise() %>%
   mutate(
-    section = paste0("# ", discipline, "\n\n", text)
+    block = paste0(
+      '<div class="discipline">\n\n',
+      '<h2>', discipline, '</h2>\n\n',
+      html_section,
+      '\n</div>\n'
+    )
   ) %>%
-  pull(section) %>%
+  pull(block) %>%
   cat(sep = "\n")
+		
 
 ```
